styles/styles.css
html {
  font-family: "Press Start 2P", system-ui;
  font-weight: 400;
}

main,
.intro,
.end-game,
.contact {
  position: relative;
  min-height: calc(100dvh - 8rem);
}

.container {
  width: min(67.5rem, calc(100vw - 2rem));
  margin-inline: auto;
}

.nav-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 4rem;
}

.nav-bar div {
  display: flex;
  align-items: center;
}

.ranking-btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  height: 3rem;
  padding-inline: 1rem;
  margin-left: 1rem;
  background: rgb(255, 255, 255);
  color: rgb(0, 0, 0);
  border: 3px solid rgb(0, 0, 0);
  transition: all 200ms;
}

.ranking-btn:hover {
  background: rgb(255, 233, 189);
}

.ranking-btn span {
  position: relative;
  top: 2px;
}

.ranking-btn img {
  height: 1.5rem;
  width: 1.5rem;
  aspect-ratio: 1;
}

.ranking-btn:hover img {
  scale: 1.1;
}

.intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.intro.hidden {
  display: none;
}

.game {
  display: none;
}

.game.visible {
  display: block;
}

.two-cols {
  display: flex;
  align-items: center;
  gap: 2rem;
}

/* player form */

.player-form {
  width: min(60rem, 100%);
}

.player-form button {
  height: 4rem;
  width: 100%;
  margin-top: 4rem;
  padding-inline: 2rem;
  border: 3px solid rgb(0, 0, 0);
  background: rgb(40, 148, 255);
  color: rgb(0, 0, 0);
  transition: all 200ms;
}

.player-form button:hover {
  opacity: 90%;
}

.player-form label {
  display: block;
  margin-bottom: 0.3rem;
}

.player-form input,
.player-form select {
  height: 4rem;
  width: 100%;
  padding-inline: 1rem;
  border: 3px solid rgb(187, 187, 187);
  outline: none;
  font: inherit;
}

.player-form input {
  margin-bottom: 2rem;
  font-size: 1.25rem;
  transition: all 200ms;
}

.player-form input:focus,
.player-form select:focus {
  border-color: rgb(119, 187, 255);
}

/* game header */
.game-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-block: 3rem;
}

.game-header .score {
  display: inline-block;
  color: rgb(0, 0, 0);
}

.game-header .score.shake {
  animation: shake 500ms ease-in;
}
.game-header .score.pulse {
  animation: pulse 500ms ease-in;
}

.game-header .score.shake.decrease {
  color: rgb(255, 0, 0);
}

.game-header .score.pulse.increase {
  color: rgb(219, 152, 18);
}

.game-header .timer.ending {
  display: inline-block;
  color: rgb(255, 0, 0);
  animation: pulse 1s infinite;
}

/* board */
.board {
  flex-shrink: 0;
  width: max-content;
  border: 4px solid rgb(0, 0, 0);
}

.board-row {
  display: flex;
}

.board-cell {
  width: 6rem;
  aspect-ratio: 1/1;
  border: 4px solid rgb(0, 0, 0);
  font-size: 2rem;
  transition: 200ms all ease-in-out;
}

.board-cell:active {
  transform: scale(0.99);
}

.board-cell.selected {
  color: rgb(255, 255, 255);
  background: rgb(40, 148, 255);
}

.board-cell.selected.last {
  border-color: rgb(104, 180, 255);
}

.board-cell.valid {
  background: rgba(40, 148, 255, 0.3);
}

.board-cell:hover:not(.selected, .invalid) {
  background: rgba(40, 148, 255, 0.5);
  font-size: 2.5rem;
}

.board-cell.invalid {
  background: rgba(255, 47, 40, 0.3);
  font-size: 2.5rem;
}

/* current word */
.word-container {
  display: flex;
  align-items: start;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  padding-right: 2rem;
}

.word-container .current-word {
  align-items: center;
  display: flex;
  height: 4rem;
  width: 100%;
  padding-inline-start: 1rem;
  border-bottom: 3px dashed rgb(0, 0, 0);
  font-size: 1.25rem;
}

.check-word {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
  height: 4rem;
  padding-inline: 2.5rem;
  border: none;
  background: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  text-transform: capitalize;
}

.check-word img {
  height: 2.5rem;
  width: 2.5rem;
  aspect-ratio: 1;
}

/* words list */
.words {
  padding-block: 2rem;
  margin-top: 2rem;
}

.words h2 {
  margin-bottom: 1rem;
  font-size: 1.25rem;
}

.words-list {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  margin-top: 2rem;
}

.words-list li {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-width: calc(50% - 1rem);
  padding: 1rem;
  border: 3px solid rgb(0, 0, 0);
}

.alert {
  position: absolute;
  right: 0;
  left: 0;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 4rem;
  width: max-content;
  padding-inline: 2rem;
  margin-inline: auto;
  visibility: hidden;
  background: rgb(255, 255, 255);
  border: 3px solid rgb(0, 0, 0);
  opacity: 0;
  transition: all 200ms;
}

.alert.visible {
  opacity: 100;
  visibility: visible;
}

.end-game {
  display: none;
}

.end-game.visible {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.end-game .star {
  height: 8rem;
  width: 8rem;
  margin-bottom: 3rem;
  z-index: -1;
  filter: contrast(2);
  animation: slide-up 500ms ease-out;
}

.end-game .title {
  margin-bottom: 2rem;
  text-shadow: 4px 4px 1px rgb(255, 209, 135);
}

.end-game .result {
  margin-bottom: 2.5rem;
  font-size: 1.25rem;
  text-align: center;
}

.end-game .restart {
  position: relative;
  display: inline-flex;
  align-items: center;
  gap: 1rem;
  height: 4rem;
  padding-inline: 2rem;
  background: rgb(255, 204, 122);
  border: 3px solid rgb(0, 0, 0);
}

.end-game .restart span {
  position: relative;
  left: -1.5rem;
  transition: all 300ms;
}

.end-game .restart:hover {
  background: rgb(255, 220, 165);
}

.end-game .restart img {
  height: 2rem;
  width: 2rem;
  opacity: 0;
  visibility: hidden;
  filter: saturate(2);
  transform: translateY(1rem);
  transition: all 200ms;
}

.end-game .restart:hover img {
  scale: 1.1;
  opacity: 1;
  visibility: visible;
  transform: translateY(0rem);
}

.end-game .restart:hover span {
  transform: translateX(1.6rem);
}

/* Contact Page */
.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.contact h1,
.intro h1 {
  margin-bottom: 1rem;
  font-size: 2.5rem;
  text-shadow: 4px 4px 1px rgb(108, 213, 255);
}

.contact p,
.intro p {
  max-width: 40ch;
  margin-bottom: 4rem;
  font-size: 1.5rem;
  text-align: center;
  color: rgb(128, 128, 128);
}

.contact-form {
  display: flex;
  flex-direction: column;
  gap: 0.875rem;
  width: min(30rem, 100%);
}

.contact-form .input-group label {
  display: block;
  margin-bottom: 0.2rem;
  color: rgb(116, 116, 116);
  transition: color 200ms ease-in-out;
}

.contact-form .input-group label:has(+ input:focus, + textarea:focus) {
  color: rgb(0, 0, 0);
}

.contact-form :is(input, button) {
  height: 3rem;
  width: 100%;
  font: inherit;
  outline: none;
}

.contact-form :is(input, textarea) {
  padding: 0.5rem;
  border: 3px solid rgb(182, 182, 182);
}

.contact-form textarea {
  width: 100%;
  height: 5rem;
  resize: none;
  outline: none;
  border-radius: 0.3rem;
  font: inherit;
}

.contact-form :is(input:focus, textarea:focus) {
  border-color: rgb(0, 0, 0);
}

.contact-form .input-group :is(input.error, textarea.error) {
  border-color: rgb(191, 54, 54);
}

.contact-form button {
  padding-inline: 2rem;
  margin-top: 1rem;
  border: none;
  background: rgb(21, 22, 23);
  color: rgb(255, 255, 255);
}

.contact-form button:active {
  scale: 0.99;
  opacity: 97%;
}

.contact-form .error-msg {
  display: block;
  height: 2rem;
  margin-top: 0.5rem;
  color: rgb(255, 0, 0);
  line-height: 1.5;
  font-size: 0.875rem;
}

footer {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 4rem;
  padding-inline: 4rem;
}

footer a {
  transition: all 200ms;
}

footer img {
  display: block;
  position: absolute;
  top: 0;
  height: 2.5rem;
  width: 2.5rem;
  z-index: -1;
  aspect-ratio: 1;
  opacity: 0;
  transition: all 200ms;
}

footer a:hover ~ img {
  opacity: 1;
  transform: translateY(-2rem);
}

.ranking {
  position: absolute;
  inset: 0;
  width: min(40rem, 98%);
  margin: auto;
  padding: 3rem 2rem;
}

.ranking::backdrop {
  background: rgba(0, 0, 0, 0.323);
  backdrop-filter: blur(2px);
}

.ranking header {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 3rem;
}

.ranking header div {
  display: flex;
  align-items: baseline;
  gap: 1.2rem;
  flex-wrap: wrap;
}

.ranking header div img {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  aspect-ratio: 1;
  filter: saturate(2);
}

.ranking header .close {
  height: 2.5rem;
  width: 2.5rem;
  border: none;
  background: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
}

.ranking .order-by {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.ranking .order-by label {
  display: block;
  font-size: 0.8rem;
}

.ranking .order-by select {
  height: 2.5rem;
  padding-inline: 2rem;
  border: 3px solid rgb(0, 0, 0);
  font: inherit;
  font-size: 0.8rem;
  outline: none;
}

.ranking .players {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  max-height: 30rem;
  overflow-y: auto;
  scrollbar-gutter: stable;
  font-size: 0.8rem;
}

.ranking .players li,
.ranking .labels {
  display: flex;
  align-items: center;
}

.ranking .players .empty {
  display: flex;
  flex-direction: column-reverse;
  gap: 1rem;
  padding-block: 2rem;
  color: rgb(128, 128, 128);
}

.ranking .players .empty img {
  height: 5rem;
  width: 5rem;
}

.ranking .labels {
  font-size: 0.7rem;
  margin-bottom: 1rem;
  padding-right: 1rem;
  color: gray;
}

.ranking .players li .name,
.ranking .labels .name {
  width: 55%;
}

.ranking .players li .date,
.ranking .labels .date {
  width: 35%;
  text-align: center;
}
.ranking .players li .score,
.ranking .labels .score {
  width: 10%;
  text-align: end;
}

@media screen and (max-width: 800px) {
  .contact h1,
  .intro h1 {
    font-size: 1.6rem;
  }

  .contact p,
  .intro p {
    font-size: 0.8rem;
  }

  .ranking-btn {
    height: 3rem;
    padding: 0;
    aspect-ratio: 1;
    background: white;
  }

  .ranking-btn img {
    display: block;
    filter: saturate(2);
  }

  .ranking-btn span {
    display: none;
  }

  .two-cols {
    flex-direction: column;
    justify-content: center;
  }

  .word-container {
    padding-right: 0;
  }

  .word-container .current-word {
    text-align: center;
  }

  .check-word {
    width: 100%;
  }

  .end-game .title {
    text-align: center;
    line-height: 1.7;
    font-size: 1.25rem;
  }

  .end-game .result {
    font-size: 0.8rem;
    line-height: 1.5;
  }

  .ranking .players {
    font-size: 0.7rem;
  }

  .ranking h2 {
    font-size: 1.125rem;
  }

  .ranking .players li .name,
  .ranking .labels .name {
    width: 40%;
  }
  .ranking .players li .date,
  .ranking .labels .date {
    width: 40%;
    text-align: center;
  }
  .ranking .players li .score,
  .ranking .labels .score {
    width: 20%;
    text-align: end;
  }

  footer {
    text-align: center;
    font-size: 0.8rem;
    padding-inline: 1rem;
  }
}

@keyframes pulse {
  0% {
    scale: 1;
  }
  50% {
    scale: 1.2;
  }
  100% {
    transform: translateY(0px);
    scale: 1;
  }
}

@keyframes shake {
  10%,
  90% {
    transform: translateY(-1px);
  }

  20%,
  80% {
    transform: translateY(2px);
  }

  30%,
  50%,
  70% {
    transform: translateY(-4px);
  }

  40%,
  60% {
    transform: translateY(4px);
  }
}

@keyframes slide-up {
  0% {
    opacity: 0.2;
    transform: translateY(10rem) rotate(18deg);
    scale: 1;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
    transform: translateY(0) rotate(0deg);

    rotate: 0;
    scale: 1;
  }
}

